     and do so if we can.
  - Debug -pedantic effects on compilation.
  - Fix defects nobody noticed in swrite -format binary/sread -format binary
    Probably introduced about SpecTcl-2.0  
May 12, 2005
  - Fixed attach -format .... error that probably only expresses on 
    gcc-3.x since nobody's seen/reported it but me until now
May 13, 2005
  - Fixed problem in Strip chart so that the parameter list is returned 
    in the correct order
--------------------------- End of Pre3 mods ------------
May 17, 2005
  - Set map to on by default in Xamine.
May 18, 2005
  - Add support for CTCLString::AppendElement(DFloat_t, const char* format)
    use it in parameter package's  parameter list of mapped parameters
    as a test.
  - Add support for CTCLString::AppendElement(long, const char* format)
  - Add support for mask equals gates as well as define the mask gate base class.  - Add Support for "not mask" and "and mask" gates
May 20, 2005
  - Support for compilation on gcc/g++ 4.0
May 23, 2005
  - Integrate gamma gate redo=======
  - Add Support for "not mask" and "and mask" gates
  - Added support for "gate -list [pattern]" so that users can filter
    the results of the gate -list command
  - Added support for "spectrum -list [pattern]" so that users can filter
    the results of the spectrum -list command
May 27, 2005
  - Added support for a glob like pattern in the switch of the clear, pararmeter
    bind, apply, and pseudo commands.  When a pattern is given after -list, the 
    command returns objects whose name matches the pattern.
May 31, 2005
  - Remove extra copy construction in TreeParameter ThrowIf's.. as that's an 
    enormous performance hit.
June 1, 2005
  - Fix documentation errors in gate command wrt mask gates.

3.1
June 7, 2005
  - Incorporate defect fix in guiintegrate.cc into this version.
June 20, 2005
  - Fix type on Spectrum.h  getAxisMapCount() had been spelled GetAxisMapCout().